--- a/barArcadeGame/barArcadeGame.csproj
+++ b/barArcadeGame/barArcadeGame.csproj
@@ -14,12 +14,18 @@
     <Compile Remove="c2\GeonBit.UI\**" />
     <Compile Remove="Content\bin\DesktopGL\Content\GeonBit.UI\**" />
     <Compile Remove="Content\bin\DesktopGL\GeonBit.UI\**" />
+    <Compile Remove="Content\NewFolder1\**" />
+    <Compile Remove="Content\NewFolder\**" />
     <EmbeddedResource Remove="c2\GeonBit.UI\**" />
     <EmbeddedResource Remove="Content\bin\DesktopGL\Content\GeonBit.UI\**" />
     <EmbeddedResource Remove="Content\bin\DesktopGL\GeonBit.UI\**" />
+    <EmbeddedResource Remove="Content\NewFolder1\**" />
+    <EmbeddedResource Remove="Content\NewFolder\**" />
     <None Remove="c2\GeonBit.UI\**" />
     <None Remove="Content\bin\DesktopGL\Content\GeonBit.UI\**" />
     <None Remove="Content\bin\DesktopGL\GeonBit.UI\**" />
+    <None Remove="Content\NewFolder1\**" />
+    <None Remove="Content\NewFolder\**" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Icon.ico" />
@@ -30,7 +36,6 @@
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="GeonBit.UI" Version="4.1.0.1" />
     <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
@@ -39,10 +44,6 @@
     <Reference Include="GeonBit.UI.DataTypes">
       <HintPath>..\..\..\.nuget\packages\geonbit.ui\4.1.0.1\lib\netcoreapp3.1\GeonBit.UI.DataTypes.dll</HintPath>
     </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Content\NewFolder1\" />
-    <Folder Include="Content\NewFolder\" />
   </ItemGroup>
   <ItemGroup>
     <None Update="Content\Font\defaultFont.spritefont">
